[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ui/menu/TabStatus.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/Adventurer-1.5/adventurer-v1.5-Sheet.png" type="Texture" id=2]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/ui/icons/icon_heart.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/icons/sunflower.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/icons/axe.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.0745098, 0.101961, 1 )
anti_aliasing = false

[node name="TabStatus" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 340.0
margin_top = 165.0
margin_right = -358.0
margin_bottom = -180.0
theme = ExtResource( 3 )
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 1 )

[node name="HBoxC" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 566.0
margin_bottom = 359.0
size_flags_vertical = 3

[node name="VBoxC" type="VBoxContainer" parent="HBoxC"]
margin_right = 273.0
margin_bottom = 343.0
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="Portrait" type="TextureRect" parent="HBoxC/VBoxC"]
margin_left = 72.0
margin_top = 81.0
margin_right = 200.0
margin_bottom = 209.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="HBoxC/VBoxC/Portrait"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="NameLabel" type="Label" parent="HBoxC/VBoxC"]
margin_left = 40.0
margin_top = 225.0
margin_right = 232.0
margin_bottom = 261.0
rect_min_size = Vector2( 192, 0 )
size_flags_horizontal = 4
text = "Player"
align = 1
valign = 1

[node name="Center" type="CenterContainer" parent="HBoxC"]
margin_left = 277.0
margin_right = 550.0
margin_bottom = 343.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="HBoxC/Center"]
margin_left = 70.0
margin_top = 71.0
margin_right = 202.0
margin_bottom = 271.0
columns = 2

[node name="Health" type="TextureRect" parent="HBoxC/Center/Grid"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="HealthLabel" type="Label" parent="HBoxC/Center/Grid"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "10"
align = 1
valign = 1

[node name="Attack" type="TextureRect" parent="HBoxC/Center/Grid"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="AttackLabel" type="Label" parent="HBoxC/Center/Grid"]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
text = "10"
align = 1
valign = 1

[node name="Defense" type="TextureRect" parent="HBoxC/Center/Grid"]
margin_top = 136.0
margin_right = 64.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="DefenseLabel" type="Label" parent="HBoxC/Center/Grid"]
margin_left = 68.0
margin_top = 136.0
margin_right = 132.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
text = "10"
align = 1
valign = 1
